--- a/index.html
+++ b/index.html
@@ -3,57 +3,59 @@
 <head>
 	<meta charset="UTF-8">
 	<title>First Website</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<div id="logo">
-			<img>
-			<h2>Valentina Panetta - I am a future Full Stack Web Developer</h2>
-		</div>
-		<nav>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About Me</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div id="banner">
-		<div id="banner-img">
-			<h1>This is my first website :)</h1>
-		</div>
-	</div>
-	<main>
-		<div id="title">
-			<h2>Latest Blog Posts</h2>
-		</div>
-		<div id="catalog">
-			<div id="box">
-				<img>
-				<p>
+	<div id="container">
+		<header>
+			<div id="logo">
+				<img src="resources/img/codefactory-vienna-logo.png" alt="logo">
+				<h2>Valentina Panetta - I am a future Full Stack Web Developer</h2>
 			</div>
-			<div id="box">
-				<img>
-				<p>
-			</div>
-			<div id="box">
-				<img>
-				<p>
-			</div>
-			<div id="box">
-				<img>
-				<p>
+			<nav>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About Me</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
+		<div id="banner">
+			<div id="banner-img">
+				<h1>This is my first website :)</h1>
 			</div>
 		</div>
+		<main>
+			<div id="title">
+				<h2>Latest Blog Posts</h2>
+			</div>
+			<div id="catalog">
+				<div id="box">
+					<img>
+					<p>
+				</div>
+				<div id="box">
+					<img>
+					<p>
+				</div>
+				<div id="box">
+					<img>
+					<p>
+				</div>
+				<div id="box">
+					<img>
+					<p>
+				</div>
+			</div>
 
-	</main>
-	<footer>
-		<hr></hr>
-		<img>
-		<p>Valentina Panetta - CodeFactory 2019</p>
-	</footer>
-	
+		</main>
+		<footer>
+			<hr></hr>
+			<img>
+			<p>Valentina Panetta - CodeFactory 2019</p>
+		</footer>
+	</div>
 </body>
 </html>
