--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</nav>
 		</header>
 		<div id="banner">
-			<div id="banner-img">
+			<div class="banner-img">
 				<h1>This is my first website :)</h1>
 			</div>
 		</div>
@@ -32,19 +32,19 @@
 				<h2>Latest Blog Posts</h2>
 			</div>
 			<div id="catalog">
-				<div id="box">
+				<div class="box">
 					<img>
 					<p>
 				</div>
-				<div id="box">
+				<div class="box">
 					<img>
 					<p>
 				</div>
-				<div id="box">
+				<div class="box">
 					<img>
 					<p>
 				</div>
-				<div id="box">
+				<div class="box">
 					<img>
 					<p>
 				</div>
