--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
 			</div>
 			<div id="catalog">
 				<div class="box">
-					<img>
-					<p>
+					<img src="resources/img/Phone.png" alt="Phone">
+					<p>Location marketing platform Uberall raiser further $25M and acquuires competitor Navads</p>
 				</div>
 				<div class="box">
-					<img>
-					<p>
+					<img src="resources/img/Taxify-Scooters.jpg" alt="Taxify">
+					<p>Taxify is entering the e-scooter game</p>
 				</div>
 				<div class="box">
-					<img>
-					<p>
+					<img src="resources/img/Devices.jpg" alt="Devices">
+					<p>Livongo Health expands under new offering with Abbott Labs</p>
 				</div>
 				<div class="box">
-					<img>
-					<p>
+					<img src="resources/img/Debit_card_ATM.jpg" alt="Debit card">
+					<p>European banking app Monese scores $60M Series B led by Kinnevik</p>
 				</div>
 			</div>
 
 		</main>
 		<footer>
 			<hr></hr>
-			<img>
+			<img src="resources/img/codefactory-vienna-logo.png" alt="logo">
 			<p>Valentina Panetta - CodeFactory 2019</p>
 		</footer>
 	</div>
