--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div id="container">
+		<!-- HEADER AND NAV -->
 		<header>
 			<div id="logo">
 				<img src="resources/img/codefactory-vienna-logo.png" alt="logo">
@@ -22,11 +23,13 @@
 				</ul>
 			</nav>
 		</header>
+		<!-- BANNER -->
 		<div id="banner">
 			<div class="banner-img">
 				<h1>This is my first website :)</h1>
 			</div>
 		</div>
+		<!-- MAIN CONTENT -->
 		<main>
 			<div id="title">
 				<h2>Latest Blog Posts</h2>
@@ -49,8 +52,8 @@
 					<p>European banking app Monese scores $60M Series B led by Kinnevik</p>
 				</div>
 			</div>
-
 		</main>
+		<!-- FOOTER -->
 		<footer>
 			<hr></hr>
 			<img src="resources/img/codefactory-vienna-logo.png" alt="logo">
