adds html pages, contact content and all css files

--- a/index.html
+++ b/index.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>First Website</title>
-	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,900" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>First Website</title>
+    <link rel="stylesheet" type="text/css" href="resources/css/style_main.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,900" rel="stylesheet">
 </head>
+
 <body>
-	<div id="container">
-		<!-- HEADER AND NAV -->
-		<header>
-			<div id="logo">
-				<img src="resources/img/codefactory-vienna-logo.png" alt="logo">
-				<h2>Valentina Panetta - I am a future Full Stack Web Developer</h2>
-			</div>
-			<nav>
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About Me</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
-		<!-- BANNER -->
-		<div id="banner">
-			<div class="banner-img">
-				<h1>This is my first website :)</h1>
-			</div>
-		</div>
-		<!-- MAIN CONTENT -->
-		<main>
-			<div id="title">
-				<h2>Latest Blog Posts</h2>
-			</div>
-			<div id="catalog">
-				<div class="box">
-					<img src="resources/img/Phone.png" alt="Phone">
-					<p>Location marketing platform Uberall raiser further $25M and acquuires competitor Navads</p>
-				</div>
-				<div class="box">
-					<img src="resources/img/Taxify-Scooters.jpg" alt="Taxify">
-					<p>Taxify is entering the e-scooter game</p>
-				</div>
-				<div class="box">
-					<img src="resources/img/Devices.jpg" alt="Devices">
-					<p>Livongo Health expands under new offering with Abbott Labs</p>
-				</div>
-				<div class="box">
-					<img src="resources/img/Debit_card_ATM.jpg" alt="Debit card">
-					<p>European banking app Monese scores $60M Series B led by Kinnevik</p>
-				</div>
-			</div>
-		</main>
-		<!-- FOOTER -->
-		<footer>
-			<hr></hr>
-			<img src="resources/img/codefactory-vienna-logo.png" alt="logo">
-			<p>Valentina Panetta - CodeFactory 2019</p>
-		</footer>
-	</div>
+    <div id="container">
+        <!-- HEADER AND NAV -->
+        <header>
+            <div id="logo">
+                <img src="resources/img/codefactory-vienna-logo.png" alt="logo">
+                <h2>Valentina Panetta - I am a future Full Stack Web Developer</h2>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!-- BANNER -->
+        <div id="banner">
+            <div class="banner-img">
+                <h1>This is my first website :)</h1>
+            </div>
+        </div>
+        <!-- MAIN CONTENT -->
+        <main>
+            <div id="title">
+                <h2>Latest Blog Posts</h2>
+            </div>
+            <div id="catalog">
+                <div class="box">
+                    <img src="resources/img/Phone.png" alt="Phone">
+                    <p>Location marketing platform Uberall raiser further $25M and acquuires competitor Navads</p>
+                </div>
+                <div class="box">
+                    <img src="resources/img/Taxify-Scooters.jpg" alt="Taxify">
+                    <p>Taxify is entering the e-scooter game</p>
+                </div>
+                <div class="box">
+                    <img src="resources/img/Devices.jpg" alt="Devices">
+                    <p>Livongo Health expands under new offering with Abbott Labs</p>
+                </div>
+                <div class="box">
+                    <img src="resources/img/Debit_card_ATM.jpg" alt="Debit card">
+                    <p>European banking app Monese scores $60M Series B led by Kinnevik</p>
+                </div>
+            </div>
+        </main>
+        <!-- FOOTER -->
+        <footer>
+            <hr>
+            </hr>
+            <img src="resources/img/codefactory-vienna-logo.png" alt="logo">
+            <p>Valentina Panetta - CodeFactory 2019</p>
+        </footer>
+    </div>
 </body>
+
 </html>
