--- a/about.html
+++ b/about.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>About Me</title>
+	<link rel="stylesheet" type="text/css" href="resources/css/style_about.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,900" rel="stylesheet">
 </head>
 <body>
 	
