--- a/contact.html
+++ b/contact.html
@@ -3,41 +3,58 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Contact</title>
+    <link rel="stylesheet" type="text/css" href="resources/css/style_contact.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,900" rel="stylesheet">
 </head>
 
 <body>
-    <!-- HEADER AND NAV -->
-    <header>
-        <div id="logo">
-            <img src="resources/img/codefactory-vienna-logo.png" alt="logo">
-            <h2>Valentina Panetta - I am a future Full Stack Web Developer</h2>
+    <div id="container">
+        <!-- HEADER AND NAV -->
+        <header>
+            <div id="logo">
+                <img src="resources/img/codefactory-vienna-logo.png" alt="logo">
+                <h2>Valentina Panetta - I am a future Full Stack Web Developer</h2>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!-- INFORMATION -->
+        <div class="flex">
+        <div id="info">
+        	<h1>Dear Valentina,</h1>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div id="form">
-        <form action="action_page.php">
-            First name:<br>
-            <input type="text" name="firstname" placeholder="Your First Name"><br>
-            Last name:<br>
-            <input type="text" name="lastname" placeholder="Your Last Name"><br />
-            Email:<br>
-            <input type="text" name="email" placeholder="Your Email"><br />
-            <br />
-            Message me: <br />
-            <textarea name="message" rows="10" cols="30">Lorem ipsum default text.
-	      </textarea>
-            <br />
-            <br />
-            <input type="submit" value="Submit your message">
-        </form>
+        <!-- FORM -->
+        <div id="form">
+            <form action="action_page.php">
+                First name:<br>
+                <input type="text" name="firstname" placeholder="Your First Name"><br>
+                Last name:<br>
+                <input type="text" name="lastname" placeholder="Your Last Name"><br />
+                Email:<br>
+                <input type="text" name="email" placeholder="Your Email"><br />
+                <br />
+                Message me: <br />
+                <textarea name="message" rows="10" cols="30"></textarea>
+                <br />
+                <br />
+                <input type="submit" value="Submit your message">
+            </form>
+        </div>
+    </div>
+         <!-- FOOTER -->
+        <footer>
+            <hr>
+            </hr>
+            <img src="resources/img/codefactory-vienna-logo.png" alt="logo">
+            <p>Valentina Panetta - CodeFactory 2019</p>
+        </footer>
     </div>
 </body>
 
