--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,30 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,900" rel="stylesheet">
 </head>
 <body>
-	
+	<!-- CONTAINER -->
+    <div id="container">
+    	<!-- HEADER AND NAV -->
+        <header>
+            <div id="logo">
+                <img src="resources/img/codefactory-vienna-logo.png" alt="logo">
+                <h2>Valentina Panetta - I am a future Full Stack Web Developer</h2>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!-- FOOTER -->
+        <footer>
+            <hr>
+            </hr>
+            <img src="resources/img/codefactory-vienna-logo.png" alt="logo">
+            <p>Valentina Panetta - CodeFactory 2019</p>
+        </footer>
+    </div>
 </body>
 </html>
