about me page completed

--- a/about.html
+++ b/about.html
@@ -26,6 +26,17 @@
                 </ul>
             </nav>
         </header>
+        <!-- MAIN CONTENT -->
+        <main class="flex">
+        	<div class="about">
+        		<h1>About me</h1>
+        		<p>I like cats, Reinassance paintings, witchy things, Hozier's singing and losing track of time playing Stardew Valley.</p>
+        	</div>
+        	<div class="image">
+        		<img src="resources/img/valentina.jpg" alt="Valentina">
+        		<p>Me in Queen Mary's Rose Gardens, <i style="color: #ffc7c7;">London</i></p>
+        	</div>
+        </main>
         <!-- FOOTER -->
         <footer>
             <hr>
