--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <!-- CONTAINER -->
     <div id="container">
-    	<!-- HEADER AND NAV -->
+        <!-- HEADER AND NAV -->
         <header>
             <div id="logo">
                 <img src="resources/img/codefactory-vienna-logo.png" alt="logo">
@@ -19,23 +19,23 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <!-- MAIN CONTENT -->
         <main class="flex">
-        	<div class="about">
-        		<h1>About me</h1>
-        		<p>I like cats, Reinassance paintings, witchy things, Hozier's singing and losing track of time playing Stardew Valley.</p>
-        	</div>
-        	<div class="image">
-        		<img src="resources/img/valentina.jpg" alt="Valentina">
-        		<p>Me in Queen Mary's Rose Gardens, <i style="color: #ffc7c7;">London</i></p>
-        	</div>
+            <div class="about">
+                <h1>About me</h1>
+                <p><b style="color: #ffc7c7;">I like</b> cats, Reinassance paintings, witchy things, Hozier's singing and losing track of time playing Stardew Valley.</p>
+            </div>
+            <div class="image">
+                <img src="resources/img/valentina.jpg" alt="Valentina">
+                <p>Me in Queen Mary's Rose Gardens, <i style="color: #ffc7c7;">London</i></p>
+            </div>
         </main>
         <!-- FOOTER -->
         <footer>
