--- a/contact.html
+++ b/contact.html
@@ -18,37 +18,37 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <!-- INFORMATION -->
         <div class="flex">
-        <div id="info">
-        	<h1>Dear Valentina,</h1>
+            <div id="info">
+                <h1>Dear Valentina,</h1>
+            </div>
+            <!-- FORM -->
+            <div id="form">
+                <form action="action_page.php">
+                    First name:<br>
+                    <input type="text" name="firstname" placeholder="Your First Name"><br>
+                    Last name:<br>
+                    <input type="text" name="lastname" placeholder="Your Last Name"><br />
+                    Email:<br>
+                    <input type="text" name="email" placeholder="Your Email"><br />
+                    <br />
+                    Message me: <br />
+                    <textarea name="message" rows="10" cols="30"></textarea>
+                    <br />
+                    <br />
+                    <input type="submit" value="Submit your message">
+                </form>
+            </div>
         </div>
-        <!-- FORM -->
-        <div id="form">
-            <form action="action_page.php">
-                First name:<br>
-                <input type="text" name="firstname" placeholder="Your First Name"><br>
-                Last name:<br>
-                <input type="text" name="lastname" placeholder="Your Last Name"><br />
-                Email:<br>
-                <input type="text" name="email" placeholder="Your Email"><br />
-                <br />
-                Message me: <br />
-                <textarea name="message" rows="10" cols="30"></textarea>
-                <br />
-                <br />
-                <input type="submit" value="Submit your message">
-            </form>
-        </div>
-    </div>
-         <!-- FOOTER -->
+        <!-- FOOTER -->
         <footer>
             <hr>
             </hr>
